fixed wrapping on navBar adaptive views

--- a/client/src/components/header/NavBar.css
+++ b/client/src/components/header/NavBar.css
@@ -1,5 +1,6 @@
 .logo {
-  width: 150px;
+  width: auto;
+  height: 50px;
 }
 
 .navbar-dark {
@@ -13,6 +14,7 @@
   margin-right: 20px;
   display: flex;
   align-items: center;
+  white-space: nowrap;
 }
 
 .navbar-dark .navbar-nav .nav-link:hover {
@@ -37,6 +39,7 @@
   font-size: 16px;
   font-weight: bold;
   text-transform: uppercase;
+  white-space: nowrap;
 }
 
 .btn-create .icon {
@@ -50,14 +53,18 @@
 }
 
 .navbar-nav {
+  display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  align-items: center;
   width: 100%;
+  flex-wrap: nowrap;
 }
 
 .nav-item {
   display: flex;
   align-items: center;
+  white-space: nowrap;
 }
 
 .nav-link.active {
@@ -65,14 +72,14 @@
   font-weight: bold;
 }
 
-@media (max-width: var(--breakpoint-lg)) {
-  .navbar-brand img {
-    width: 120px;
+@media (max-width: 987px) {
+  .logo {
+    height: 30px;
   }
 
   .navbar-dark .navbar-nav .nav-link {
     font-size: 14px;
-    margin-right: 15px;
+    margin-right: 10px;
   }
 
   .navbar-dark .navbar-nav .nav-link .icon {
@@ -90,14 +97,14 @@
   }
 }
 
-@media (max-width: var(--breakpoint-md)) {
-  .navbar-brand img {
-    width: 100px;
+@media (max-width: 576px) {
+  .logo {
+    height: 25px;
   }
 
   .navbar-dark .navbar-nav .nav-link {
     font-size: 12px;
-    margin-right: 10px;
+    margin-right: 5px;
   }
 
   .navbar-dark .navbar-nav .nav-link .icon {
@@ -112,30 +119,5 @@
   .btn-create .icon {
     font-size: 16px;
     margin-right: 2px;
-  }
-}
-
-@media (max-width: var(--breakpoint-sm)) {
-  .navbar-brand img {
-    width: 80px;
-  }
-
-  .navbar-dark .navbar-nav .nav-link {
-    font-size: 10px;
-    margin-right: 5px;
-  }
-
-  .navbar-dark .navbar-nav .nav-link .icon {
-    font-size: 14px;
-  }
-
-  .btn-create {
-    padding: 2px 4px;
-    font-size: 10px;
-  }
-
-  .btn-create .icon {
-    font-size: 14px;
-    margin-right: 1px;
   }
 }
